test/types/range/elliot/badRangeLiterals/badBoundedRange.good
badBoundedRange.chpl:2: error: Bounds of 'low..high' must be integers of compatible types.
