test/types/range/elliot/badRangeLiterals/badBoundedRange.chpl
// test error message for an illegal fully bounded range
var badBounded = 0.0..1.0;
